objects/LAT_Action__c.object
<CustomObject>
    <fields>
        <fullName>ActionPlan__c</fullName>
        <label>Plano de Ação</label>
        <referenceTo>LAT_ActionPlan__c</referenceTo>
        <relationshipLabel>Açoes</relationshipLabel>
        <relationshipName>actionPlans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>actions__c</fullName>
        <label>Ações Táticas e Operacionais</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>actualStatus__c</fullName>
        <label>Situação Atual (Status)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verde</fullName>
                </value>
                <value>
                    <fullName>Amarelo</fullName>
                </value>
                <value>
                    <fullName>Vermelho</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>endDate__c</fullName>
        <label>Data Término</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inCharge__c</fullName>
        <label>Responsável</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>notes__c</fullName>
        <label>Notas (Pendências/Infos Importantes)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>resourcesPlan__c</fullName>
        <label>Recursos Planejado</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>resourcesUsed__c</fullName>
        <label>Recursos Realizado</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <label>Data Início</label>
        <type>Date</type>
    </fields>
    <label>Ação</label>
    <nameField>
        <displayFormat>AC-{000}</displayFormat>
        <label>Ações</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ações</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>